--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.words": [
         "DEEPL",
         "nosniff",
+        "productweight",
         "shadowfoam",
-        "supabase"
+        "stockwarn",
+        "supabase",
+        "syncstock"
     ]
 }
