--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
+        "COLOURS",
         "DEEPL",
+        "foamsheet",
         "nosniff",
         "productweight",
         "shadowfoam",
         "stockwarn",
         "supabase",
-        "syncstock"
+        "syncstock",
+        "upserting"
     ]
 }
