--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "next": "15.2.3",
     "rate-limiter-flexible": "^6.1.0",
