Layout of Admin sections.

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -3,7 +3,11 @@
         "COLOURS",
         "DEEPL",
         "foamsheet",
+        "Halfords",
+        "hikoki",
+        "KOKI",
         "nosniff",
+        "NUPROL",
         "productweight",
         "shadowfoam",
         "stockwarn",
