Orders are handled appropriately across manufacturing, packing, and completed stages.

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Halfords",
         "hikoki",
         "KOKI",
+        "Manu",
         "nosniff",
         "NUPROL",
         "productweight",
