--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.49.1",
-    "next": "15.2.3",
+    "geist": "^1.3.1",
+    "next": "14.1.3",
     "rate-limiter-flexible": "^6.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
@@ -23,15 +24,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.34",
+    "autoprefixer": "^10.4.18",
     "csv-parse": "^5.6.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
