Final version pushed to Vercel

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "COLOURS",
         "DEEPL",
+        "despatchcloud",
         "foamsheet",
         "Halfords",
         "hikoki",
@@ -9,7 +10,9 @@
         "Manu",
         "nosniff",
         "NUPROL",
+        "PGRST",
         "productweight",
+        "SAMEORIGIN",
         "shadowfoam",
         "stockwarn",
         "supabase",
