--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -11,30 +11,34 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/supabase-js": "^2.39.7",
     "geist": "^1.3.1",
     "next": "14.1.3",
     "rate-limiter-flexible": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.12.2",
     "resend": "^4.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.34",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "autoprefixer": "^10.4.18",
+    "critters": "^0.0.23",
     "csv-parse": "^5.6.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.4.2"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
