--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -3,6 +3,7 @@
         "COLOURS",
         "DEEPL",
         "despatchcloud",
+        "ehthumbs",
         "foamsheet",
         "Halfords",
         "hikoki",
@@ -13,6 +14,7 @@
         "PGRST",
         "productweight",
         "SAMEORIGIN",
+        "sentryclirc",
         "shadowfoam",
         "stockwarn",
         "supabase",
