Inserts and PieChart UI

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -3,6 +3,7 @@
         "COLOURS",
         "DEEPL",
         "despatchcloud",
+        "dewalt",
         "ehthumbs",
         "foamsheet",
         "Halfords",
@@ -16,6 +17,7 @@
         "SAMEORIGIN",
         "sentryclirc",
         "shadowfoam",
+        "Skus",
         "stockwarn",
         "supabase",
         "syncstock",
