MediumSheets stock manipulation

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -8,6 +8,7 @@
         "foamsheet",
         "Halfords",
         "hikoki",
+        "importsvg",
         "KOKI",
         "Manu",
         "nosniff",
@@ -15,11 +16,13 @@
         "PGRST",
         "productweight",
         "SAMEORIGIN",
+        "scalingfactor",
         "sentryclirc",
         "shadowfoam",
         "Skus",
         "stockwarn",
         "supabase",
+        "svgstring",
         "syncstock",
         "upserted",
         "upserting"
