--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -8,6 +8,7 @@
         "foamsheet",
         "Halfords",
         "hikoki",
+        "hullpoints",
         "importsvg",
         "KOKI",
         "Manu",
