Started adding nesting functionality.

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "COLOURS",
         "DEEPL",
+        "deepnest",
         "despatchcloud",
         "dewalt",
         "ehthumbs",
@@ -13,6 +14,7 @@
         "KOKI",
         "Manu",
         "nosniff",
+        "numshells",
         "NUPROL",
         "PGRST",
         "productweight",
@@ -21,6 +23,7 @@
         "sentryclirc",
         "shadowfoam",
         "Skus",
+        "sqds",
         "stockwarn",
         "supabase",
         "svgstring",
