--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -14,6 +14,7 @@
     "@supabase/sentry-js-integration": "^0.3.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "clipper-lib": "^6.4.2",
     "geist": "^1.3.1",
     "next": "14.1.3",
     "rate-limiter-flexible": "^6.1.0",
