More Nesting functionality

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -1,34 +1,77 @@
 {
     "cSpell.words": [
+        "abspath",
+        "addline",
+        "Beziers",
+        "biggestarea",
+        "binclone",
         "COLOURS",
+        "cutpoint",
         "DEEPL",
         "deepnest",
         "despatchcloud",
         "dewalt",
         "ehthumbs",
         "foamsheet",
+        "fullinside",
         "Halfords",
         "hikoki",
         "hullpoints",
+        "idstart",
         "importsvg",
+        "inkscape",
+        "inrange",
+        "ischild",
         "KOKI",
+        "linelist",
+        "localscale",
         "Manu",
+        "MLHVCSQTA",
+        "newp",
+        "newpaths",
+        "newpopulation",
+        "newsvg",
+        "newtree",
         "nosniff",
         "numshells",
         "NUPROL",
+        "offsetpaths",
+        "openpaths",
+        "parsererror",
+        "partgroup",
+        "patha",
+        "pathb",
         "PGRST",
+        "poligonify",
+        "polygonify",
+        "polygonofied",
+        "polygontree",
+        "prevx",
+        "prevy",
         "productweight",
+        "pxwidth",
+        "relpath",
         "SAMEORIGIN",
         "scalingfactor",
+        "seglist",
         "sentryclirc",
         "shadowfoam",
+        "sheetchildren",
+        "sheetids",
+        "sheetsources",
         "Skus",
+        "splitpath",
         "sqds",
         "stockwarn",
         "supabase",
+        "svgelements",
+        "svglist",
+        "svgs",
         "svgstring",
         "syncstock",
+        "topath",
         "upserted",
-        "upserting"
+        "upserting",
+        "xlink"
     ]
 }
