Added all files for core nesting functionality

--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -2,76 +2,136 @@
     "cSpell.words": [
         "abspath",
         "addline",
+        "allpoints",
+        "Aoffsetx",
+        "Aoffsety",
+        "arcmid",
+        "arcrotate",
+        "arcsweep",
+        "Arotation",
         "Beziers",
         "biggestarea",
+        "binarea",
         "binclone",
+        "Bnormlength",
+        "Boffsetx",
+        "Boffsety",
+        "Brotation",
+        "Casteljau",
+        "clipperjs",
+        "coef",
         "COLOURS",
         "cutpoint",
         "DEEPL",
         "deepnest",
         "despatchcloud",
         "dewalt",
+        "doesnt",
+        "dotleft",
+        "dotnorm",
+        "dotproduct",
+        "dotright",
         "ehthumbs",
+        "firstpoint",
+        "Fmax",
+        "Fmin",
+        "Fnormlength",
         "foamsheet",
+        "fullarc",
         "fullinside",
         "Halfords",
         "hikoki",
         "hullpoints",
         "idstart",
         "importsvg",
+        "indexmax",
+        "indexmin",
         "inkscape",
         "inrange",
         "ischild",
         "KOKI",
+        "largearc",
+        "leftvector",
         "linelist",
         "localscale",
         "Manu",
+        "maxradius",
+        "mida",
+        "midb",
+        "midx",
+        "minarea",
+        "minp",
+        "minvertex",
+        "minwidth",
         "MLHVCSQTA",
         "newp",
         "newpaths",
         "newpopulation",
         "newsvg",
         "newtree",
+        "nextaindex",
+        "nextbindex",
+        "normaldotleft",
+        "normaldotright",
+        "normalmax",
+        "normalmin",
+        "normdot",
         "nosniff",
         "numshells",
         "NUPROL",
         "offsetpaths",
+        "offsetx",
+        "offsety",
         "openpaths",
         "parsererror",
         "partgroup",
         "patha",
         "pathb",
+        "pdot",
+        "pdotnorm",
         "PGRST",
+        "pointlist",
         "poligonify",
         "polygonify",
         "polygonofied",
         "polygontree",
+        "prevaindex",
+        "prevbindex",
         "prevx",
         "prevy",
         "productweight",
         "pxwidth",
+        "rectbounds",
         "relpath",
+        "rightvector",
         "SAMEORIGIN",
         "scalingfactor",
+        "scandirection",
         "seglist",
         "sentryclirc",
         "shadowfoam",
         "sheetchildren",
         "sheetids",
         "sheetsources",
+        "shiftvector",
         "Skus",
         "splitpath",
         "sqds",
         "stockwarn",
+        "subarc",
         "supabase",
         "svgelements",
         "svglist",
         "svgs",
         "svgstring",
+        "sxinclusive",
         "syncstock",
+        "tarray",
         "topath",
+        "unplaceable",
         "upserted",
         "upserting",
+        "willcocks",
         "xlink"
     ]
 }
