--- a/cloud_cut/.vscode/settings.json
+++ b/cloud_cut/.vscode/settings.json
@@ -32,6 +32,11 @@
         "dotproduct",
         "dotright",
         "ehthumbs",
+        "Einhell",
+        "Engelbert",
+        "Erbauer",
+        "Facom",
+        "Festool",
         "firstpoint",
         "Fmax",
         "Fmin",
@@ -41,6 +46,7 @@
         "fullinside",
         "Halfords",
         "hikoki",
+        "Hornbach",
         "hullpoints",
         "idstart",
         "importsvg",
@@ -49,13 +55,17 @@
         "inkscape",
         "inrange",
         "ischild",
+        "Keter",
         "KOKI",
         "largearc",
         "leftvector",
         "linelist",
         "localscale",
+        "Magnusson",
+        "Makita",
         "Manu",
         "maxradius",
+        "Metabo",
         "mida",
         "midb",
         "midx",
@@ -89,6 +99,7 @@
         "pathb",
         "pdot",
         "pdotnorm",
+        "Peli",
         "PGRST",
         "pointlist",
         "poligonify",
@@ -101,9 +112,14 @@
         "prevy",
         "productweight",
         "pxwidth",
+        "qbrick",
         "rectbounds",
+        "Reisser",
         "relpath",
+        "Ridgid",
         "rightvector",
+        "Rothenberger",
+        "Ryobi",
         "SAMEORIGIN",
         "scalingfactor",
         "scandirection",
@@ -115,6 +131,7 @@
         "sheetsources",
         "shiftvector",
         "Skus",
+        "Sortimo",
         "splitpath",
         "sqds",
         "stockwarn",
@@ -126,12 +143,21 @@
         "svgstring",
         "sxinclusive",
         "syncstock",
+        "Tanos",
         "tarray",
+        "Thoughbuilt",
         "topath",
+        "toughbilt",
+        "Toughbuilt",
         "unplaceable",
         "upserted",
         "upserting",
+        "Visaulization",
+        "vtuf",
         "willcocks",
+        "Worx",
+        "Wurth",
+        "Würth",
         "xlink"
     ]
 }
