--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,16 @@
     {
       "src": "package.json",
       "use": "@vercel/next"
+    },
+    {
+      "src": "cloud_cut/src/app/api/convert/route.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/convert",
+      "dest": "cloud_cut/src/app/api/convert/route.py"
     }
   ],
   "functions": {
