Nesting and Stock update.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "importsvg",
         "indexmax",
         "indexmin",
+        "inkscape",
         "inpoly",
         "inrange",
         "ischild",
@@ -103,6 +104,7 @@
         "scandirection",
         "shadowfoam",
         "sheetchildren",
+        "sheetid",
         "sheetids",
         "sheetsources",
         "Sortimo",
