--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -28,6 +28,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.3",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
@@ -36,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "autoprefixer": "^10.4.18",
+    "babel-loader": "^10.0.0",
     "critters": "^0.0.23",
     "csv-parse": "^5.6.0",
     "eslint": "^8.57.0",
