Inserts Screen Update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,137 +1,138 @@
 {
-    "cSpell.words": [
-        "Aindex",
-        "Aoffsetx",
-        "Aoffsety",
-        "arcmid",
-        "beziers",
-        "biggestarea",
-        "binclone",
-        "Bindex",
-        "Binside",
-        "Bnormlength",
-        "Boffsetx",
-        "Boffsety",
-        "Casteljau",
-        "coef",
-        "cutpoint",
-        "deepnest",
-        "despatchcloud",
-        "dewalt",
-        "dotleft",
-        "dotnorm",
-        "dotproduct",
-        "dotright",
-        "Einhell",
-        "Engelbert",
-        "Erbauer",
-        "Facom",
-        "Festool",
-        "Fmax",
-        "Fmin",
-        "Fnormlength",
-        "foamsheet",
-        "fullarc",
-        "fullinside",
-        "geometryutil",
-        "Halfords",
-        "Hikoki",
-        "Hornbach",
-        "hullpoints",
-        "idstart",
-        "importsvg",
-        "indexmax",
-        "indexmin",
-        "inkscape",
-        "inpoly",
-        "inrange",
-        "ischild",
-        "Keter",
-        "largearc",
-        "leftvector",
-        "Magnusson",
-        "makita",
-        "manu",
-        "maxd",
-        "Metabo",
-        "mida",
-        "midb",
-        "midx",
-        "minp",
-        "minvertex",
-        "miny",
-        "newp",
-        "newpaths",
-        "newpopulation",
-        "newsvg",
-        "newtree",
-        "nextaindex",
-        "nextbindex",
-        "nexti",
-        "nextj",
-        "normaldotleft",
-        "normaldotright",
-        "normalmax",
-        "normalmin",
-        "normdot",
-        "nosniff",
-        "nothin",
-        "Nuprol",
-        "offsetpaths",
-        "offsetx",
-        "offsety",
-        "partgroup",
-        "pdot",
-        "pdotnorm",
-        "Peli",
-        "polygonify",
-        "polygontree",
-        "prevaindex",
-        "prevbindex",
-        "prevlength",
-        "prevunit",
-        "prevvector",
-        "QBRICK",
-        "referencex",
-        "referencey",
-        "Reisser",
-        "Ridgid",
-        "rightvector",
-        "Rothenberger",
-        "Ryobi",
-        "SAMEORIGIN",
-        "scalingfactor",
-        "scandirection",
-        "shadowfoam",
-        "sheetchildren",
-        "sheetid",
-        "sheetids",
-        "sheetsources",
-        "Sortimo",
-        "sqds",
-        "startpoint",
-        "startpoints",
-        "startx",
-        "starty",
-        "subarc",
-        "Supabase",
-        "svgelements",
-        "svglist",
-        "svgparser",
-        "Svgs",
-        "svgstring",
-        "sxinclusive",
-        "Tanos",
-        "toughbilt",
-        "Toughbuilt",
-        "unitv",
-        "vecd",
-        "vectorlength",
-        "vlength",
-        "vtuf",
-        "willcocks",
-        "Worx",
-        "wurth",
-        "Würth"
-    ]
+  "cSpell.words": [
+    "Aindex",
+    "Aoffsetx",
+    "Aoffsety",
+    "arcmid",
+    "beziers",
+    "biggestarea",
+    "binclone",
+    "Bindex",
+    "Binside",
+    "Bnormlength",
+    "Boffsetx",
+    "Boffsety",
+    "Casteljau",
+    "coef",
+    "cutpoint",
+    "deepnest",
+    "despatchcloud",
+    "dewalt",
+    "dotleft",
+    "dotnorm",
+    "dotproduct",
+    "dotright",
+    "Einhell",
+    "Engelbert",
+    "Erbauer",
+    "Facom",
+    "Festool",
+    "Fmax",
+    "Fmin",
+    "Fnormlength",
+    "foamsheet",
+    "fullarc",
+    "fullinside",
+    "geometryutil",
+    "Halfords",
+    "Hikoki",
+    "Hornbach",
+    "HSKT",
+    "hullpoints",
+    "idstart",
+    "importsvg",
+    "indexmax",
+    "indexmin",
+    "inkscape",
+    "inpoly",
+    "inrange",
+    "ischild",
+    "Keter",
+    "largearc",
+    "leftvector",
+    "Magnusson",
+    "makita",
+    "manu",
+    "maxd",
+    "Metabo",
+    "mida",
+    "midb",
+    "midx",
+    "minp",
+    "minvertex",
+    "miny",
+    "newp",
+    "newpaths",
+    "newpopulation",
+    "newsvg",
+    "newtree",
+    "nextaindex",
+    "nextbindex",
+    "nexti",
+    "nextj",
+    "normaldotleft",
+    "normaldotright",
+    "normalmax",
+    "normalmin",
+    "normdot",
+    "nosniff",
+    "nothin",
+    "Nuprol",
+    "offsetpaths",
+    "offsetx",
+    "offsety",
+    "partgroup",
+    "pdot",
+    "pdotnorm",
+    "Peli",
+    "polygonify",
+    "polygontree",
+    "prevaindex",
+    "prevbindex",
+    "prevlength",
+    "prevunit",
+    "prevvector",
+    "QBRICK",
+    "referencex",
+    "referencey",
+    "Reisser",
+    "Ridgid",
+    "rightvector",
+    "Rothenberger",
+    "Ryobi",
+    "SAMEORIGIN",
+    "scalingfactor",
+    "scandirection",
+    "shadowfoam",
+    "sheetchildren",
+    "sheetid",
+    "sheetids",
+    "sheetsources",
+    "Sortimo",
+    "sqds",
+    "startpoint",
+    "startpoints",
+    "startx",
+    "starty",
+    "subarc",
+    "Supabase",
+    "svgelements",
+    "svglist",
+    "svgparser",
+    "Svgs",
+    "svgstring",
+    "sxinclusive",
+    "Tanos",
+    "toughbilt",
+    "Toughbuilt",
+    "unitv",
+    "vecd",
+    "vectorlength",
+    "vlength",
+    "vtuf",
+    "willcocks",
+    "Worx",
+    "wurth",
+    "Würth"
+  ]
 }
