updates to stock screen.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "Boffsety",
     "Casteljau",
     "coef",
+    "colour",
     "COLOURS",
     "cutpoint",
     "deepnest",
@@ -52,6 +53,7 @@
     "Keter",
     "largearc",
     "leftvector",
+    "LWPOLYLINE",
     "Magnusson",
     "makita",
     "manu",
