can update stock levels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Aberdeenshire",
     "Aindex",
     "Aoffsetx",
     "Aoffsety",
@@ -12,6 +13,7 @@
     "Bnormlength",
     "Boffsetx",
     "Boffsety",
+    "CARTO",
     "Casteljau",
     "coef",
     "colour",
