--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -18,6 +18,7 @@
     "dxf-parser": "^1.1.2",
     "formidable": "^3.5.4",
     "geist": "^1.3.1",
+    "leaflet": "^1.9.4",
     "next": "14.1.3",
     "rate-limiter-flexible": "^6.1.0",
     "react": "^18.2.0",
