analytics and component adjustment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "COLOURS",
     "cutpoint",
     "deepnest",
+    "defaulticon",
     "despatchcloud",
     "dewalt",
     "dotleft",
@@ -53,7 +54,9 @@
     "inrange",
     "ischild",
     "Keter",
+    "Lanarkshire",
     "largearc",
+    "latlng",
     "leftvector",
     "LWPOLYLINE",
     "Magnusson",
@@ -91,6 +94,7 @@
     "pdot",
     "pdotnorm",
     "Peli",
+    "Perthshire",
     "polygonify",
     "polygontree",
     "prevaindex",
@@ -102,6 +106,7 @@
     "referencex",
     "referencey",
     "Reisser",
+    "Renfrewshire",
     "Ridgid",
     "rightvector",
     "Rothenberger",
