--- a/cloud_cut/package.json
+++ b/cloud_cut/package.json
@@ -14,15 +14,18 @@
     "@supabase/sentry-js-integration": "^0.3.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/leaflet": "^1.9.18",
     "clipper-lib": "^6.4.2",
     "dxf-parser": "^1.1.2",
     "formidable": "^3.5.4",
     "geist": "^1.3.1",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.1.3",
     "rate-limiter-flexible": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "recharts": "^2.12.2",
     "resend": "^4.1.2",
