--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,22 @@
   "cSpell.words": [
     "Aberdeenshire",
     "Aindex",
+    "allplacements",
+    "allpoints",
     "Aoffsetx",
     "Aoffsety",
     "arcmid",
+    "Arotation",
     "beziers",
     "biggestarea",
+    "binarea",
     "binclone",
     "Bindex",
     "Binside",
     "Bnormlength",
     "Boffsetx",
     "Boffsety",
+    "Brotation",
     "CARTO",
     "Casteljau",
     "coef",
@@ -67,8 +72,10 @@
     "mida",
     "midb",
     "midx",
+    "minarea",
     "minp",
     "minvertex",
+    "minwidth",
     "miny",
     "newp",
     "newpaths",
@@ -104,6 +111,7 @@
     "prevunit",
     "prevvector",
     "QBRICK",
+    "rectbounds",
     "referencex",
     "referencey",
     "Reisser",
@@ -120,6 +128,7 @@
     "sheetid",
     "sheetids",
     "sheetsources",
+    "shiftvector",
     "Skus",
     "Sortimo",
     "sqds",
@@ -139,6 +148,7 @@
     "toughbilt",
     "Toughbuilt",
     "unitv",
+    "unplaceable",
     "vecd",
     "vectorlength",
     "VIEWBOX",
