--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
   "cSpell.words": [
     "Aberdeenshire",
+    "abspath",
+    "addline",
     "Aindex",
     "allplacements",
     "allpoints",
     "Aoffsetx",
     "Aoffsety",
     "arcmid",
+    "arcrotate",
+    "arcsweep",
     "Arotation",
     "beziers",
     "biggestarea",
@@ -20,6 +24,7 @@
     "Brotation",
     "CARTO",
     "Casteljau",
+    "clipperjs",
     "coef",
     "colour",
     "COLOURS",
@@ -63,11 +68,13 @@
     "largearc",
     "latlng",
     "leftvector",
+    "linelist",
     "LWPOLYLINE",
     "Magnusson",
     "makita",
     "manu",
     "maxd",
+    "maxradius",
     "Metabo",
     "mida",
     "midb",
@@ -77,6 +84,7 @@
     "minvertex",
     "minwidth",
     "miny",
+    "MLHVCSQTA",
     "newp",
     "newpaths",
     "newpopulation",
@@ -97,24 +105,31 @@
     "offsetpaths",
     "offsetx",
     "offsety",
+    "openpaths",
     "parsererror",
     "partgroup",
+    "patha",
+    "pathb",
     "pdot",
     "pdotnorm",
     "Peli",
     "Perthshire",
     "polygonify",
+    "polygonifying",
     "polygontree",
     "prevaindex",
     "prevbindex",
     "prevlength",
     "prevunit",
     "prevvector",
+    "prevx",
+    "prevy",
     "QBRICK",
     "rectbounds",
     "referencex",
     "referencey",
     "Reisser",
+    "relpath",
     "Renfrewshire",
     "Ridgid",
     "rightvector",
@@ -123,6 +138,7 @@
     "SAMEORIGIN",
     "scalingfactor",
     "scandirection",
+    "seglist",
     "shadowfoam",
     "sheetchildren",
     "sheetid",
@@ -131,6 +147,7 @@
     "shiftvector",
     "Skus",
     "Sortimo",
+    "splitpath",
     "sqds",
     "startpoint",
     "startpoints",
@@ -145,6 +162,8 @@
     "svgstring",
     "sxinclusive",
     "Tanos",
+    "tarray",
+    "topath",
     "toughbilt",
     "Toughbuilt",
     "unitv",
@@ -157,6 +176,8 @@
     "willcocks",
     "Worx",
     "wurth",
-    "Würth"
+    "Würth",
+    "xlink",
+    "Zmlhvcsqtaz"
   ]
 }
