--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "Aberdeenshire",
     "abspath",
     "addline",
+    "Aflipped",
     "Aindex",
+    "allbounds",
     "allplacements",
     "allpoints",
     "Aoffsetx",
@@ -12,7 +14,9 @@
     "arcrotate",
     "arcsweep",
     "Arotation",
+    "bbox",
     "beziers",
+    "Bflipped",
     "biggestarea",
     "binarea",
     "binclone",
@@ -24,10 +28,12 @@
     "Brotation",
     "CARTO",
     "Casteljau",
+    "clipkey",
     "clipperjs",
     "coef",
     "colour",
     "COLOURS",
+    "convexhull",
     "cutpoint",
     "deepnest",
     "defaulticon",
@@ -51,12 +57,15 @@
     "geometryutil",
     "Halfords",
     "Hikoki",
+    "hnfp",
     "Hornbach",
     "HSKT",
     "hullpoints",
     "idstart",
     "ilike",
     "importsvg",
+    "incentivizes",
+    "indentify",
     "indexmax",
     "indexmin",
     "inkscape",
@@ -80,11 +89,14 @@
     "midb",
     "midx",
     "minarea",
+    "Minkowski",
     "minp",
     "minvertex",
     "minwidth",
     "miny",
     "MLHVCSQTA",
+    "nestindex",
+    "newnfp",
     "newp",
     "newpaths",
     "newpopulation",
@@ -94,6 +106,7 @@
     "nextbindex",
     "nexti",
     "nextj",
+    "Nfps",
     "normaldotleft",
     "normaldotright",
     "normalmax",
@@ -107,13 +120,16 @@
     "offsety",
     "openpaths",
     "parsererror",
+    "partbounds",
     "partgroup",
+    "partpoints",
     "patha",
     "pathb",
     "pdot",
     "pdotnorm",
     "Peli",
     "Perthshire",
+    "placednum",
     "polygonify",
     "polygonifying",
     "polygontree",
@@ -140,15 +156,21 @@
     "scandirection",
     "seglist",
     "shadowfoam",
+    "sheetarea",
     "sheetchildren",
     "sheetid",
     "sheetids",
+    "sheetplacements",
     "sheetsources",
+    "shiftedpart",
+    "shiftedplaced",
     "shiftvector",
     "Skus",
     "Sortimo",
     "splitpath",
     "sqds",
+    "sqlen",
+    "startindex",
     "startpoint",
     "startpoints",
     "startx",
@@ -164,10 +186,14 @@
     "Tanos",
     "tarray",
     "topath",
+    "totalarea",
+    "totalnum",
+    "totalsheetarea",
     "toughbilt",
     "Toughbuilt",
     "unitv",
     "unplaceable",
+    "utilisation",
     "vecd",
     "vectorlength",
     "VIEWBOX",
