--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -133,6 +133,7 @@
     "polygonify",
     "polygonifying",
     "polygontree",
+    "precomputation",
     "prevaindex",
     "prevbindex",
     "prevlength",
