Can export nest as DXF

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,10 +52,14 @@
     "Fmin",
     "Fnormlength",
     "foamsheet",
+    "FSOR",
+    "FSYS",
+    "FSYSC",
     "fullarc",
     "fullinside",
     "geometryutil",
     "Halfords",
+    "HAMT",
     "Hikoki",
     "hnfp",
     "Hornbach",
@@ -95,7 +99,9 @@
     "minwidth",
     "miny",
     "MLHVCSQTA",
+    "MPORG",
     "MTBS",
+    "MTCB",
     "nestindex",
     "newnfp",
     "newp",
