dimensions for parts true to size.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,10 +22,15 @@
     "binclone",
     "Bindex",
     "Binside",
+    "BLBX",
+    "BLBXOG",
+    "BLSBX",
+    "BLST",
     "Bnormlength",
     "Boffsetx",
     "Boffsety",
     "Brotation",
+    "BWBX",
     "CARTO",
     "Casteljau",
     "clipkey",
@@ -39,10 +44,23 @@
     "defaulticon",
     "despatchcloud",
     "dewalt",
+    "DORG",
     "dotleft",
     "dotnorm",
     "dotproduct",
     "dotright",
+    "DTSB",
+    "DTSD",
+    "DTSDXL",
+    "DTSO",
+    "DTSRTB",
+    "DTSYS",
+    "DTSYSA",
+    "DTSYSB",
+    "DTSYSD",
+    "DTSYSO",
+    "EECL",
+    "EECS",
     "Einhell",
     "Engelbert",
     "Erbauer",
@@ -53,18 +71,38 @@
     "Fnormlength",
     "foamsheet",
     "FSOR",
+    "FSPBO",
+    "FSPD",
+    "FSPDO",
+    "FSPMB",
+    "FSPRB",
+    "FSPSO",
+    "FSPTB",
     "FSYS",
     "FSYSC",
+    "FSYSM",
     "fullarc",
     "fullinside",
     "geometryutil",
     "Halfords",
     "HAMT",
+    "HHIT",
+    "HIKCMB",
+    "HIKCSB",
+    "HIKCT",
     "Hikoki",
+    "HLWRHC",
     "hnfp",
     "Hornbach",
+    "HPHC",
+    "HSKBOTC",
+    "HSKCLO",
+    "HSKCO",
+    "HSKD",
     "HSKT",
+    "HSKTB",
     "hullpoints",
+    "HXLWRHC",
     "idstart",
     "ilike",
     "importsvg",
@@ -76,7 +114,19 @@
     "inpoly",
     "inrange",
     "ischild",
+    "JCBSSV",
     "Keter",
+    "KMBCBFW",
+    "KMBCBHW",
+    "KMBMRB",
+    "KMBMTB",
+    "KMBSDT",
+    "KMBSTB",
+    "KTRSNR",
+    "KTRSNRHO",
+    "KTRSNRMC",
+    "KTRSNRTB",
+    "KTRSNRTC",
     "Lanarkshire",
     "largearc",
     "latlng",
@@ -148,6 +198,7 @@
     "prevvector",
     "prevx",
     "prevy",
+    "PVROCK",
     "QBRICK",
     "rectbounds",
     "referencex",
@@ -183,6 +234,7 @@
     "startpoints",
     "startx",
     "starty",
+    "STSYS",
     "subarc",
     "Supabase",
     "svgelements",
