Multi sheet nesting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "cSpell.words": [
     "Aberdeenshire",
     "abspath",
+    "ACADVER",
     "addline",
     "Aflipped",
+    "afmetingen",
     "Aindex",
     "allbounds",
     "allplacements",
@@ -14,7 +16,12 @@
     "arcrotate",
     "arcsweep",
     "Arotation",
+    "Bader",
+    "Bahco",
     "bbox",
+    "BCCB",
+    "Beschilderung",
+    "bewegwijzering",
     "beziers",
     "Bflipped",
     "biggestarea",
@@ -22,28 +29,62 @@
     "binclone",
     "Bindex",
     "Binside",
+    "BLACKRED",
     "BLBX",
     "BLBXOG",
+    "bleus",
+    "Blox",
     "BLSBX",
     "BLST",
     "Bnormlength",
     "Boffsetx",
     "Boffsety",
+    "boîte",
+    "Bolígrafo",
+    "Boxx",
+    "Britool",
     "Brotation",
+    "BTSBMR",
+    "BTSFDB",
+    "BTSFDG",
+    "BTSFDO",
+    "BTSFDR",
+    "BTSFDY",
+    "BTSZB",
+    "BTSZG",
+    "BTSZO",
+    "BTSZR",
+    "BTSZY",
     "BWBX",
     "CARTO",
     "Casteljau",
+    "CENGTS",
+    "CHCP",
+    "CLIKSTOR",
     "clipkey",
     "clipperjs",
     "coef",
+    "Colores",
     "colour",
     "COLOURS",
+    "COMBI",
+    "Confezione",
+    "Connecx",
     "convexhull",
+    "CSXS",
+    "Customisable",
     "cutpoint",
     "deepnest",
     "defaulticon",
     "despatchcloud",
     "dewalt",
+    "documentenlijst",
+    "documenthouderlijst",
+    "documenti",
+    "Dokumentenhalter",
+    "Dokumentenrahmen",
+    "dokumenthållare",
+    "dokumentram",
     "DORG",
     "dotleft",
     "dotnorm",
@@ -59,17 +100,27 @@
     "DTSYSB",
     "DTSYSD",
     "DTSYSO",
+    "DWGCODEPAGE",
     "EECL",
     "EECS",
     "Einhell",
+    "ENDSEC",
+    "ENDTAB",
     "Engelbert",
     "Erbauer",
+    "español",
+    "EXTMAX",
+    "EXTMIN",
     "Facom",
+    "FATMAX",
     "Festool",
+    "Filamentos",
+    "Fluorescentes",
     "Fmax",
     "Fmin",
     "Fnormlength",
     "foamsheet",
+    "formato",
     "FSOR",
     "FSPBO",
     "FSPD",
@@ -78,12 +129,18 @@
     "FSPRB",
     "FSPSO",
     "FSPTB",
+    "FSPTPSS",
     "FSYS",
     "FSYSC",
     "FSYSM",
     "fullarc",
     "fullinside",
     "geometryutil",
+    "GIFTCARD",
+    "GMKRYG",
+    "GNAP",
+    "Größen",
+    "guía",
     "Halfords",
     "HAMT",
     "HHIT",
@@ -103,8 +160,10 @@
     "HSKTB",
     "hullpoints",
     "HXLWRHC",
+    "IDCP",
     "idstart",
     "ilike",
+    "ilustrada",
     "importsvg",
     "incentivizes",
     "indentify",
@@ -113,8 +172,14 @@
     "inkscape",
     "inpoly",
     "inrange",
+    "INSBASE",
+    "Instrucciones",
+    "interna",
+    "IOQGW",
     "ischild",
+    "ISFC",
     "JCBSSV",
+    "Kaizen",
     "Keter",
     "KMBCBFW",
     "KMBCBHW",
@@ -125,6 +190,7 @@
     "KTRSNR",
     "KTRSNRHO",
     "KTRSNRMC",
+    "KTRSNRS",
     "KTRSNRTB",
     "KTRSNRTC",
     "Lanarkshire",
@@ -133,11 +199,22 @@
     "leftvector",
     "linelist",
     "LWPOLYLINE",
+    "magnetica",
+    "magnetisch",
+    "Magnetische",
+    "Magnetischer",
+    "Magnetisk",
+    "Magnetrahmen",
     "Magnusson",
     "makita",
+    "Makpac",
+    "MAKTRAK",
     "manu",
     "maxd",
     "maxradius",
+    "MCHO",
+    "MCLOR",
+    "MDHA",
     "Metabo",
     "mida",
     "midb",
@@ -149,9 +226,33 @@
     "minwidth",
     "miny",
     "MLHVCSQTA",
+    "MMBX",
+    "MMPCL",
+    "MMPDL",
+    "MMPDM",
+    "MMTDCO",
+    "MMTDMO",
+    "MMTLPMO",
+    "MMTLTB",
+    "MMTMTB",
+    "MMTRTC",
+    "MMTXLEXTB",
+    "Motamec",
+    "MPCB",
+    "MPDORG",
+    "MPDTB",
+    "MPLB",
+    "MPORC",
     "MPORG",
+    "MPRTC",
+    "MPSB",
+    "MPTBA",
+    "MPTC",
+    "MPTCWB",
+    "MPXLTB",
     "MTBS",
     "MTCB",
+    "Nanuk",
     "nestindex",
     "newnfp",
     "newp",
@@ -164,6 +265,7 @@
     "nexti",
     "nextj",
     "Nfps",
+    "niños",
     "normaldotleft",
     "normaldotright",
     "normalmax",
@@ -171,25 +273,117 @@
     "normdot",
     "nosniff",
     "nothin",
+    "NUPLARGB",
+    "NUPLARGBB",
+    "NUPLARGBG",
+    "NUPLARGBK",
+    "NUPLARGBO",
+    "NUPLARGBR",
+    "NUPLARGBT",
+    "NUPLARGBY",
+    "NUPLARGE",
+    "NUPLARGG",
+    "NUPLARGK",
+    "NUPLARGLB",
+    "NUPLARGLE",
+    "NUPLARGLG",
+    "NUPLARGLK",
+    "NUPLARGLM",
+    "NUPLARGLO",
+    "NUPLARGLP",
+    "NUPLARGLR",
+    "NUPLARGLT",
+    "NUPLARGLY",
+    "NUPLARGM",
+    "NUPLARGO",
+    "NUPLARGP",
+    "NUPLARGR",
+    "NUPLARGT",
+    "NUPLARGTB",
+    "NUPLARGTG",
+    "NUPLARGTO",
+    "NUPLARGTR",
+    "NUPLARGTT",
+    "NUPLARGTY",
+    "NUPLARGY",
+    "NUPMEDB",
+    "NUPMEDBB",
+    "NUPMEDE",
+    "NUPMEDG",
+    "NUPMEDK",
+    "NUPMEDLB",
+    "NUPMEDLE",
+    "NUPMEDLG",
+    "NUPMEDLK",
+    "NUPMEDLM",
+    "NUPMEDLO",
+    "NUPMEDLP",
+    "NUPMEDLR",
+    "NUPMEDLT",
+    "NUPMEDLY",
+    "NUPMEDM",
+    "NUPMEDO",
+    "NUPMEDP",
+    "NUPMEDR",
+    "NUPMEDT",
+    "NUPMEDY",
     "Nuprol",
+    "NUPXLARGB",
+    "NUPXLARGE",
+    "NUPXLARGG",
+    "NUPXLARGK",
+    "NUPXLARGLB",
+    "NUPXLARGLE",
+    "NUPXLARGLG",
+    "NUPXLARGLK",
+    "NUPXLARGLM",
+    "NUPXLARGLO",
+    "NUPXLARGLP",
+    "NUPXLARGLR",
+    "NUPXLARGLT",
+    "NUPXLARGLY",
+    "NUPXLARGM",
+    "NUPXLARGO",
+    "NUPXLARGP",
+    "NUPXLARGR",
+    "NUPXLARGT",
+    "NUPXLARGY",
     "offsetpaths",
     "offsetx",
     "offsety",
     "openpaths",
+    "organisateur",
+    "Organisation",
+    "Organised",
+    "Organiser",
+    "Orsy",
+    "outils",
+    "OXTTC",
+    "OXTTD",
+    "OXTTO",
+    "OXTTS",
+    "OXTTTC",
+    "Packout",
+    "Parra",
     "parsererror",
     "partbounds",
     "partgroup",
     "partpoints",
     "patha",
     "pathb",
+    "PCCB",
     "pdot",
     "pdotnorm",
     "Peli",
     "Perthshire",
+    "PGRST",
     "placednum",
     "polygonify",
     "polygonifying",
     "polygontree",
+    "portadocumenti",
+    "PPBN",
+    "PPGY",
     "precomputation",
     "prevaindex",
     "prevbindex",
@@ -198,23 +392,68 @@
     "prevvector",
     "prevx",
     "prevy",
+    "productweight",
+    "Profesional",
+    "PVCT",
     "PVROCK",
+    "PVROCKB",
+    "PVROCKG",
+    "PVROCKK",
+    "PVROCKM",
+    "PVROCKO",
+    "PVROCKP",
+    "PVROCKR",
+    "PVROCKT",
+    "PVROCKY",
+    "QBONE",
+    "QBONEORG",
+    "QBPC",
+    "QBPD",
+    "QBPROD",
     "QBRICK",
+    "QBSP",
+    "QBSPC",
+    "QBSPT",
+    "QBTBV",
+    "QBTC",
+    "Rahmen",
+    "RBRCL",
+    "RBRCM",
+    "RBRCS",
     "rectbounds",
     "referencex",
     "referencey",
+    "Regalo",
     "Reisser",
     "relpath",
     "Renfrewshire",
     "Ridgid",
     "rightvector",
+    "RIGPG",
+    "RLCSPO",
+    "RLMTB",
+    "RLSPO",
+    "RLSTB",
+    "RLTC",
+    "RLTSC",
+    "ROCASE",
     "Rothenberger",
+    "RTBL",
+    "RTBS",
+    "RTCB",
     "Ryobi",
     "SAMEORIGIN",
     "scalingfactor",
     "scandirection",
+    "Scheppach",
+    "Sealey",
     "seglist",
+    "segnaletica",
+    "SEQEND",
+    "SFEC",
+    "SFIQB",
     "shadowfoam",
+    "SHAGT",
     "sheetarea",
     "sheetchildren",
     "sheetid",
@@ -224,47 +463,104 @@
     "shiftedpart",
     "shiftedplaced",
     "shiftvector",
+    "skuggskum",
     "Skus",
+    "skyltning",
+    "Socialise",
+    "Sortainer",
     "Sortimo",
     "splitpath",
     "sqds",
     "sqlen",
+    "Stackable",
+    "Stackpack",
     "startindex",
     "startpoint",
     "startpoints",
     "startx",
     "starty",
+    "STKRST",
+    "stockwarn",
+    "storlekar",
     "STSYS",
+    "Stück",
+    "stuks",
     "subarc",
     "Supabase",
+    "svart",
     "svgelements",
     "svglist",
     "SVGNEST",
     "svgparser",
     "Svgs",
     "svgstring",
+    "Swann",
     "sxinclusive",
+    "syncstock",
+    "Systainer",
+    "système",
     "Tanos",
     "tarray",
+    "TBST",
+    "TBSTCO",
+    "TBSTCTB",
+    "TBSTLTB",
+    "TBSTO",
+    "TBSTRTB",
+    "TBSTTB",
+    "TBSTTC",
+    "TMKB",
+    "TMKBN",
+    "TMKG",
+    "TMKGY",
+    "TMKK",
+    "TMKO",
+    "TMKP",
+    "TMKR",
+    "TMKW",
+    "TMKY",
+    "Toolcase",
+    "TOOLTREK",
     "topath",
     "totalarea",
     "totalnum",
     "totalsheetarea",
     "toughbilt",
     "Toughbuilt",
+    "Toughsystem",
+    "triplepack",
+    "TSTAK",
+    "twinpack",
+    "UFMDHA",
+    "UFMDHWA",
     "unitv",
     "unplaceable",
     "utilisation",
+    "Vario",
+    "VDSC",
     "vecd",
     "vectorlength",
+    "VERSASTACK",
     "VIEWBOX",
     "vlength",
+    "voor",
+    "VSSC",
     "vtuf",
+    "Weiß",
     "willcocks",
     "Worx",
+    "WSTBBX",
+    "WTHSC",
+    "WTLOB",
+    "WTLOC",
     "wurth",
     "Würth",
+    "XLARGE",
     "xlink",
-    "Zmlhvcsqtaz"
+    "XSMALL",
+    "XXLARGE",
+    "Zmlhvcsqtaz",
+    "Zollstock",
+    "zwart"
   ]
 }
